--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
         <div class="container">
             <div class="row d-flex">
-                <div class="col-6">
+                <div class="col-6 COL-12-MD col-6-sm">
                     <div class="box-1">
                         <div class="line-1"></div>
                         <h2 class="od-1">our department</h2>
@@ -39,11 +39,28 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6  COL-12-MD col-6-sm">
                     <div class="row">
                         <div class="col-6">
                             <div class="box-3">
-                                <div class="button"><img src="./assets/images/first1.jpg" alt="heart" class="img-1">
+                                <div class="button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="30" viewBox="0 0 32 30"
+                                        fill="none">
+                                        <g clip-path="url(#clip0_34717_11638)">
+                                            <path
+                                                d="M15.9909 3.57054C9.01587 -2.53012 0.14723 2.83009 0.00180337 10.0967C-0.0352563 11.9486 0.499328 13.7526 1.56343 15.4156H8.46066L9.68744 13.3709C10.0437 12.7773 10.9057 12.7581 11.2821 13.35L13.8705 17.4174L17.6435 9.45228C17.9726 8.75727 18.9532 8.7352 19.3161 9.40915L22.5503 15.4156H30.4184C36.2468 6.30633 24.7279 -4.07107 15.9909 3.57054Z"
+                                                fill="#0061FF" />
+                                            <path
+                                                d="M21.1656 16.7979L18.5448 11.9307L14.8387 19.7544C14.5234 20.4201 13.5961 20.4779 13.2007 19.8564L10.5152 15.6366L9.79574 16.8357C9.62631 17.1181 9.32121 17.2908 8.99192 17.2908H3.04688C3.23324 17.4859 2.24 16.4946 15.3302 29.517C15.6958 29.8808 16.2868 29.8809 16.6525 29.517C29.5412 16.695 28.7498 17.4855 28.9358 17.2908H21.9909C21.646 17.2909 21.329 17.1015 21.1656 16.7979Z"
+                                                fill="#0061FF" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_34717_11638">
+                                                <rect width="32" height="28.8744" fill="white"
+                                                    transform="translate(0 0.915039)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg>
                                 </div>
                                 <h5 class="cancer">Cancer Care</h5>
                                 <p class="or-line"></p>
@@ -62,18 +79,15 @@
 
                             </div>
                         </div>
-                        <div class="d-fle">
-                            <div class="col-6">
-                                <div class="box-4 ml-10 pd-1">
-                                    <div class="button"> <img src="./assets/images/third3.jpg" alt="health"
-                                            class="img-3">
-                                    </div>
-                                    <h5 class="Book">Book now</h5>
-                                    <p class="or-line"></p>
-                                    <p class="para-2">The gradual
-                                        accumulation of
-                                        information about</p>
+                        <div class="col-6 pt-2">
+                            <div class="box-4  pd-1">
+                                <div class="button"> <img src="./assets/images/third3.jpg" alt="health" class="img-3">
                                 </div>
+                                <h5 class="Book">Book now</h5>
+                                <p class="or-line"></p>
+                                <p class="para-2">The gradual
+                                    accumulation of
+                                    information about</p>
                             </div>
                         </div>
                     </div>
