--- a/index.html
+++ b/index.html
@@ -4,48 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>1/3 layout3</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <section>
+    <section class="pt-80 pb-40">
         <div class="container">
-            <div class="row d-flex">
-                <div class="col-6 COL-12-MD col-6-sm">
-                    <div class="box-1">
-                        <div class="line-1"></div>
-                        <h2 class="od-1">our department</h2>
-                        <p class="para-1">Problems trying to resolve the conflict between
+            <div class="row align-center justi-center ">
+                <div class="col-6 col-12-lg">
+                    <div class="box">
+                        <div>
+                            <svg width="94" height="8" viewBox="0 0 94 8" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect y="0.352539" width="94" height="7" fill="#FC724D" />
+                            </svg>
+                        </div>
+                        <h2>Our Department</h2>
+                        <p class="problems">Problems trying to resolve the conflict betweens
                             the two major realms of Classical physics:
                             Newtonian mechanics</p>
-                        <div class="d-flex">
-                            <h6 class="learn">Learn More</h6>
-                            <span class="arrow"><svg xmlns="http://www.w3.org/2000/svg" width="9" height="17"
-                                    viewBox="0 0 9 17" -->
-                                    fill="none">
-                                    <g clip-path="url(#clip0_34717_11630)">
-                                        <path fill-rule="evenodd" clip-rule="evenodd"
-                                            d="M0.180771 0.53331C0.237928 0.476008 0.305828 0.430546 0.380583 0.399526C0.455337 0.368506 0.535477 0.352539 0.616412 0.352539C0.697347 0.352539 0.777487 0.368506 0.852241 0.399526C0.926996 0.430546 0.994896 0.476008 1.05205 0.53331L8.4358 7.91706C8.4931 7.97422 8.53857 8.04212 8.56959 8.11687C8.60061 8.19163 8.61657 8.27177 8.61657 8.3527C8.61657 8.43363 8.60061 8.51377 8.56959 8.58853C8.53857 8.66328 8.4931 8.73118 8.4358 8.78834L1.05205 16.1721C0.936514 16.2876 0.779809 16.3525 0.616412 16.3525C0.453015 16.3525 0.29631 16.2876 0.180771 16.1721C0.0652316 16.0566 0.000322157 15.8998 0.000322157 15.7364C0.000322157 15.5731 0.0652316 15.4163 0.180771 15.3008L7.13011 8.3527L0.180771 1.40459C0.123469 1.34744 0.078006 1.27954 0.0469863 1.20478C0.0159666 1.13003 0 1.04989 0 0.968951C0 0.888017 0.0159666 0.807877 0.0469863 0.733122C0.078006 0.658368 0.123469 0.590467 0.180771 0.53331Z"
-                                            fill="#FC724D" />
-                                    </g>
-                                    <defs>
-                                        <clipPath id="clip0_34717_11630">
-                                            <rect width="9" height="16" fill="white"
-                                                transform="translate(0 0.352539)" />
-                                        </clipPath>
-                                    </defs>
-                                </svg></span>
+                        <div class="d-flex gap-10">
+                            <p class="learn">Learn More</p>
+                            <svg width="9" height="17" viewBox="0 0 9 17" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M0.180771 0.53331C0.237928 0.476008 0.305828 0.430546 0.380583 0.399526C0.455337 0.368506 0.535477 0.352539 0.616412 0.352539C0.697347 0.352539 0.777487 0.368506 0.852241 0.399526C0.926996 0.430546 0.994896 0.476008 1.05205 0.53331L8.4358 7.91706C8.4931 7.97422 8.53857 8.04212 8.56959 8.11687C8.60061 8.19163 8.61657 8.27177 8.61657 8.3527C8.61657 8.43363 8.60061 8.51377 8.56959 8.58853C8.53857 8.66328 8.4931 8.73118 8.4358 8.78834L1.05205 16.1721C0.936514 16.2876 0.779809 16.3525 0.616412 16.3525C0.453015 16.3525 0.29631 16.2876 0.180771 16.1721C0.0652316 16.0566 0.000322157 15.8998 0.000322157 15.7364C0.000322157 15.5731 0.0652316 15.4163 0.180771 15.3008L7.13011 8.3527L0.180771 1.40459C0.123469 1.34744 0.078006 1.27954 0.0469863 1.20478C0.0159666 1.13003 0 1.04989 0 0.968951C0 0.888017 0.0159666 0.807877 0.0469863 0.733122C0.078006 0.658368 0.123469 0.590467 0.180771 0.53331Z"
+                                    fill="#FC724D" />
+
+                            </svg>
                         </div>
                     </div>
+
                 </div>
-                <div class="col-6  COL-12-MD col-6-sm">
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="box-3">
-                                <div class="button">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="30" viewBox="0 0 32 30"
-                                        fill="none">
+                <div class="col-6 col-12-lg">
+                    <div class="row align-center justi-center ">
+                        <div class="col-6 col-12-sm">
+                            <div class="box-2">
+                                <span class="icon">
+                                    <svg width="32" height="30" viewBox="0 0 32 30" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <g clip-path="url(#clip0_34717_11638)">
                                             <path
                                                 d="M15.9909 3.57054C9.01587 -2.53012 0.14723 2.83009 0.00180337 10.0967C-0.0352563 11.9486 0.499328 13.7526 1.56343 15.4156H8.46066L9.68744 13.3709C10.0437 12.7773 10.9057 12.7581 11.2821 13.35L13.8705 17.4174L17.6435 9.45228C17.9726 8.75727 18.9532 8.7352 19.3161 9.40915L22.5503 15.4156H30.4184C36.2468 6.30633 24.7279 -4.07107 15.9909 3.57054Z"
@@ -60,40 +58,83 @@
                                                     transform="translate(0 0.915039)" />
                                             </clipPath>
                                         </defs>
-                                    </svg>
-                                </div>
-                                <h5 class="cancer">Cancer Care</h5>
-                                <p class="or-line"></p>
-                                <p class="para-2">The gradual
+                                    </svg></span>
+                                <h5>Cancer Care</h5>
+                                <svg width="50" height="3" viewBox="0 0 50 3" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect y="0.352539" width="50" height="2" fill="#E74040" />
+                                </svg>
+                                <p class="info">The gradual
                                     accumulation of
                                     information about</p>
+
                             </div>
-                            <div class="box-3a">
-                                <div class="button"><img src="./assets/images/second2.jpg" alt="second" class="img-2">
-                                </div>
-                                <h5 class="online">Online Appoinment</h5>
-                                <div class="or-line"></div>
-                                <p class="para-2">The gradual
+                            <div class="box-2">
+                                <span class="icon">
+                                    <svg width="32" height="30" viewBox="0 0 32 30" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_34717_11638)">
+                                            <path
+                                                d="M15.9909 3.57054C9.01587 -2.53012 0.14723 2.83009 0.00180337 10.0967C-0.0352563 11.9486 0.499328 13.7526 1.56343 15.4156H8.46066L9.68744 13.3709C10.0437 12.7773 10.9057 12.7581 11.2821 13.35L13.8705 17.4174L17.6435 9.45228C17.9726 8.75727 18.9532 8.7352 19.3161 9.40915L22.5503 15.4156H30.4184C36.2468 6.30633 24.7279 -4.07107 15.9909 3.57054Z"
+                                                fill="#0061FF" />
+                                            <path
+                                                d="M21.1656 16.7979L18.5448 11.9307L14.8387 19.7544C14.5234 20.4201 13.5961 20.4779 13.2007 19.8564L10.5152 15.6366L9.79574 16.8357C9.62631 17.1181 9.32121 17.2908 8.99192 17.2908H3.04688C3.23324 17.4859 2.24 16.4946 15.3302 29.517C15.6958 29.8808 16.2868 29.8809 16.6525 29.517C29.5412 16.695 28.7498 17.4855 28.9358 17.2908H21.9909C21.646 17.2909 21.329 17.1015 21.1656 16.7979Z"
+                                                fill="#0061FF" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_34717_11638">
+                                                <rect width="32" height="28.8744" fill="white"
+                                                    transform="translate(0 0.915039)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg></span>
+                                <h5>Cancer Care</h5>
+                                <svg width="50" height="3" viewBox="0 0 50 3" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect y="0.352539" width="50" height="2" fill="#E74040" />
+                                </svg>
+                                <p class="info">The gradual
                                     accumulation of
                                     information about</p>
 
                             </div>
                         </div>
-                        <div class="col-6 pt-2">
-                            <div class="box-4  pd-1">
-                                <div class="button"> <img src="./assets/images/third3.jpg" alt="health" class="img-3">
-                                </div>
-                                <h5 class="Book">Book now</h5>
-                                <p class="or-line"></p>
-                                <p class="para-2">The gradual
+                        <div class="col-6 col-12-sm">
+                            <div class="box-2">
+                                <span class="icon">
+                                    <svg width="32" height="30" viewBox="0 0 32 30" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_34717_11638)">
+                                            <path
+                                                d="M15.9909 3.57054C9.01587 -2.53012 0.14723 2.83009 0.00180337 10.0967C-0.0352563 11.9486 0.499328 13.7526 1.56343 15.4156H8.46066L9.68744 13.3709C10.0437 12.7773 10.9057 12.7581 11.2821 13.35L13.8705 17.4174L17.6435 9.45228C17.9726 8.75727 18.9532 8.7352 19.3161 9.40915L22.5503 15.4156H30.4184C36.2468 6.30633 24.7279 -4.07107 15.9909 3.57054Z"
+                                                fill="#0061FF" />
+                                            <path
+                                                d="M21.1656 16.7979L18.5448 11.9307L14.8387 19.7544C14.5234 20.4201 13.5961 20.4779 13.2007 19.8564L10.5152 15.6366L9.79574 16.8357C9.62631 17.1181 9.32121 17.2908 8.99192 17.2908H3.04688C3.23324 17.4859 2.24 16.4946 15.3302 29.517C15.6958 29.8808 16.2868 29.8809 16.6525 29.517C29.5412 16.695 28.7498 17.4855 28.9358 17.2908H21.9909C21.646 17.2909 21.329 17.1015 21.1656 16.7979Z"
+                                                fill="#0061FF" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_34717_11638">
+                                                <rect width="32" height="28.8744" fill="white"
+                                                    transform="translate(0 0.915039)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg></span>
+                                <h5>Cancer Care</h5>
+                                <svg width="50" height="3" viewBox="0 0 50 3" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect y="0.352539" width="50" height="2" fill="#E74040" />
+                                </svg>
+                                <p class="info">The gradual
                                     accumulation of
                                     information about</p>
+
                             </div>
                         </div>
                     </div>
                 </div>
 
             </div>
+        </div>
         </div>
     </section>
 
