--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <section class="pt-80 pb-40">
-        <div class="container">
-            <div class="row align-center justi-center ">
+    <section>
+        <div class="container w-100">
+            <div class="row align-center ">
                 <div class="col-6 col-12-lg">
                     <div class="box">
                         <div>
@@ -69,7 +69,7 @@
                                     information about</p>
 
                             </div>
-                            <div class="box-2">
+                            <div class="box-3">
                                 <span class="icon">
                                     <svg width="32" height="30" viewBox="0 0 32 30" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <div class="col-6 col-12-sm">
-                            <div class="box-2">
+                            <div class="box-4">
                                 <span class="icon">
                                     <svg width="32" height="30" viewBox="0 0 32 30" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
