--- a/index.html
+++ b/index.html
@@ -71,24 +71,79 @@
                             </div>
                             <div class="box-3">
                                 <span class="icon">
-                                    <svg width="32" height="30" viewBox="0 0 32 30" fill="none"
+                                    <svg width="32" height="33" viewBox="0 0 32 33" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
-                                        <g clip-path="url(#clip0_34717_11638)">
-                                            <path
-                                                d="M15.9909 3.57054C9.01587 -2.53012 0.14723 2.83009 0.00180337 10.0967C-0.0352563 11.9486 0.499328 13.7526 1.56343 15.4156H8.46066L9.68744 13.3709C10.0437 12.7773 10.9057 12.7581 11.2821 13.35L13.8705 17.4174L17.6435 9.45228C17.9726 8.75727 18.9532 8.7352 19.3161 9.40915L22.5503 15.4156H30.4184C36.2468 6.30633 24.7279 -4.07107 15.9909 3.57054Z"
-                                                fill="#0061FF" />
-                                            <path
-                                                d="M21.1656 16.7979L18.5448 11.9307L14.8387 19.7544C14.5234 20.4201 13.5961 20.4779 13.2007 19.8564L10.5152 15.6366L9.79574 16.8357C9.62631 17.1181 9.32121 17.2908 8.99192 17.2908H3.04688C3.23324 17.4859 2.24 16.4946 15.3302 29.517C15.6958 29.8808 16.2868 29.8809 16.6525 29.517C29.5412 16.695 28.7498 17.4855 28.9358 17.2908H21.9909C21.646 17.2909 21.329 17.1015 21.1656 16.7979Z"
-                                                fill="#0061FF" />
+                                        <g clip-path="url(#clip0_34717_11647)">
+                                            <g clip-path="url(#clip1_34717_11647)">
+                                                <g clip-path="url(#clip2_34717_11647)">
+                                                    <path
+                                                        d="M10.6714 16.6872C11.0654 16.6056 11.4771 16.4268 11.8654 16.1465C12.982 15.3388 13.4776 14.0126 12.9712 13.1828C12.4206 12.2802 10.9144 12.3409 9.75699 13.3681C8.65019 14.3237 8.41406 15.3222 8.41406 16.3717C8.41406 17.1132 8.65123 18.4372 10.1 19.587C10.7841 19.0585 11.5995 18.6237 12.5252 18.3093L12.5375 18.3048C11.8262 18.0084 10.8991 17.4233 10.6714 16.6872ZM10.4928 14.135C10.4928 13.8249 10.7399 13.5756 11.0445 13.5756C11.3489 13.5756 11.5962 13.8261 11.5962 14.1361C11.5962 14.4462 11.3489 14.6955 11.0445 14.6955C10.7399 14.6955 10.4928 14.445 10.4928 14.135Z"
+                                                        fill="#0061FF" />
+                                                </g>
+                                            </g>
+                                            <g clip-path="url(#clip3_34717_11647)">
+                                                <g clip-path="url(#clip4_34717_11647)">
+                                                    <path
+                                                        d="M23.6074 16.3729C23.6041 15.3223 23.3691 14.3238 22.2613 13.3682C21.1048 12.342 19.5976 12.2791 19.047 13.1829C18.5416 14.0127 19.0359 15.339 20.1525 16.1466C20.541 16.4269 20.9526 16.6056 21.3465 16.6873C21.2097 17.1297 20.7937 17.5799 20.1593 17.9595C19.2869 18.4802 18.8157 18.5446 13.2341 20.398C11.1686 21.0998 9.93945 22.4945 9.93945 24.1287C9.93945 25.2928 10.5341 26.191 11.3605 26.8487C11.8803 26.3134 12.5292 25.849 13.2872 25.477C12.4144 25.0358 12.1451 24.7014 12.1451 24.1287C12.1451 23.1835 14.0344 22.6431 14.906 22.3555V24.7478L17.1128 23.7635V22.3566C17.9858 22.6457 19.8702 23.1854 19.8702 24.1287C19.8702 25.6979 15.3767 26.6234 13.4649 27.9421C12.537 28.5854 12.038 29.4031 12.038 30.3641C12.038 30.9158 12.1021 31.5999 13.0709 32.2796C13.3456 32.499 13.7272 32.1785 13.5488 31.8702C12.9087 30.5891 13.5884 29.9492 14.9081 29.3952V31.2467C14.9081 31.8558 15.4025 32.3501 16.0115 32.3501C16.6206 32.3501 17.115 31.8558 17.115 31.2467V29.3963C18.3827 29.9281 19.1806 30.6796 18.471 31.8702C18.2952 32.1726 18.6697 32.5017 18.9477 32.2796C19.8856 31.5689 19.9596 30.9598 19.9596 30.3784C19.9596 29.4836 19.4697 28.6152 18.5406 27.9498C20.4186 27.2712 22.0803 26.1292 22.0803 24.1309C22.0803 22.7505 21.2032 21.5412 19.6871 20.7754C20.3953 20.5205 20.7517 20.3495 21.2251 20.0671C23.2985 18.8279 23.6074 17.2203 23.6074 16.3729ZM20.9748 14.6956C20.6701 14.6956 20.4231 14.4451 20.4231 14.1351C20.4231 13.825 20.6701 13.5745 20.9748 13.5745C21.2792 13.5745 21.5265 13.825 21.5265 14.1351C21.5265 14.4451 21.2792 14.6956 20.9748 14.6956Z"
+                                                        fill="#0061FF" />
+                                                </g>
+                                            </g>
+                                            <g clip-path="url(#clip5_34717_11647)">
+                                                <g clip-path="url(#clip6_34717_11647)">
+                                                    <path
+                                                        d="M31.4476 2.5615H23.8908C22.4084 2.5615 21.296 3.21679 20.339 4.17386C19.2993 5.21355 18.7587 7.52472 17.1032 7.52472V4.46013C17.7601 4.07787 18.2066 3.37423 18.2066 2.55936C18.2066 1.34058 17.2186 0.352539 15.9998 0.352539C14.7809 0.352539 13.793 1.34058 13.793 2.55936C13.793 3.37417 14.2394 4.0778 14.8964 4.46013V17.6104C15.5774 17.3932 16.3248 17.1538 17.1032 16.9038V11.3767C17.5819 11.1365 17.9682 10.7482 18.2051 10.2676C18.5889 10.9236 19.3185 11.3888 20.1318 11.3888C20.9567 11.3888 21.6673 10.9308 22.0459 10.2606C23.3386 11.5533 25.7413 11.5782 27.0339 10.2855L25.1588 8.41042L26.019 8.76675C27.708 9.46638 29.6444 8.66427 30.3441 6.97522L27.6803 5.87181C30.2609 5.87174 31.4476 4.25241 31.4476 2.5615Z"
+                                                        fill="#0061FF" />
+                                                </g>
+                                            </g>
+                                            <g clip-path="url(#clip7_34717_11647)">
+                                                <g clip-path="url(#clip8_34717_11647)">
+                                                    <path
+                                                        d="M11.6613 4.17389C10.7043 3.21681 9.59189 2.56152 8.10946 2.56152H0.552734C0.552734 4.25237 1.73939 5.87176 4.31999 5.87176L1.65615 6.97517C2.35585 8.66422 4.29227 9.46627 5.98132 8.7667L6.8415 8.41037L4.96638 10.2855C6.25903 11.5782 8.66171 11.5533 9.95436 10.2605C10.333 10.9308 11.0436 11.3888 11.8685 11.3888C11.8766 11.3888 11.8848 11.3888 11.8929 11.3887C12.9711 11.3764 13.7952 10.4025 13.7952 9.32434V7.10441C12.9255 6.39085 12.4274 4.93993 11.6613 4.17389Z"
+                                                        fill="#0061FF" />
+                                                </g>
+                                            </g>
                                         </g>
                                         <defs>
-                                            <clipPath id="clip0_34717_11638">
-                                                <rect width="32" height="28.8744" fill="white"
-                                                    transform="translate(0 0.915039)" />
+                                            <clipPath id="clip0_34717_11647">
+                                                <rect width="32" height="32" fill="white"
+                                                    transform="translate(0 0.352539)" />
+                                            </clipPath>
+                                            <clipPath id="clip1_34717_11647">
+                                                <rect width="4.75568" height="7.03818" fill="white"
+                                                    transform="translate(8.41406 12.5488)" />
+                                            </clipPath>
+                                            <clipPath id="clip2_34717_11647">
+                                                <rect width="4.75568" height="7.03818" fill="white"
+                                                    transform="translate(8.41406 12.5488)" />
+                                            </clipPath>
+                                            <clipPath id="clip3_34717_11647">
+                                                <rect width="13.668" height="19.8036" fill="white"
+                                                    transform="translate(9.93945 12.5488)" />
+                                            </clipPath>
+                                            <clipPath id="clip4_34717_11647">
+                                                <rect width="13.668" height="19.8036" fill="white"
+                                                    transform="translate(9.93945 12.5488)" />
+                                            </clipPath>
+                                            <clipPath id="clip5_34717_11647">
+                                                <rect width="17.6546" height="17.2579" fill="white"
+                                                    transform="translate(13.793 0.352539)" />
+                                            </clipPath>
+                                            <clipPath id="clip6_34717_11647">
+                                                <rect width="17.6546" height="17.2579" fill="white"
+                                                    transform="translate(13.793 0.352539)" />
+                                            </clipPath>
+                                            <clipPath id="clip7_34717_11647">
+                                                <rect width="13.2425" height="8.8273" fill="white"
+                                                    transform="translate(0.552734 2.56152)" />
+                                            </clipPath>
+                                            <clipPath id="clip8_34717_11647">
+                                                <rect width="13.2425" height="8.8273" fill="white"
+                                                    transform="translate(0.552734 2.56152)" />
                                             </clipPath>
                                         </defs>
-                                    </svg></span>
-                                <h5>Cancer Care</h5>
+                                    </svg>
+                                </span>
+                                <h5 class="online">Online Appoinment</h5>
                                 <svg width="50" height="3" viewBox="0 0 50 3" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <rect y="0.352539" width="50" height="2" fill="#E74040" />
@@ -102,24 +157,28 @@
                         <div class="col-6 col-12-sm">
                             <div class="box-4">
                                 <span class="icon">
-                                    <svg width="32" height="30" viewBox="0 0 32 30" fill="none"
+                                    <svg width="32" height="33" viewBox="0 0 32 33" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
-                                        <g clip-path="url(#clip0_34717_11638)">
+                                        <g clip-path="url(#clip0_34717_11667)">
                                             <path
-                                                d="M15.9909 3.57054C9.01587 -2.53012 0.14723 2.83009 0.00180337 10.0967C-0.0352563 11.9486 0.499328 13.7526 1.56343 15.4156H8.46066L9.68744 13.3709C10.0437 12.7773 10.9057 12.7581 11.2821 13.35L13.8705 17.4174L17.6435 9.45228C17.9726 8.75727 18.9532 8.7352 19.3161 9.40915L22.5503 15.4156H30.4184C36.2468 6.30633 24.7279 -4.07107 15.9909 3.57054Z"
+                                                d="M6.34903 32.3528H25.6523C26.8009 32.3528 27.7572 31.4743 27.7572 30.3946V6.98133C27.7572 5.90144 26.8009 5.01367 25.6523 5.01367H22.4702V6.80144C22.4748 7.11177 22.23 7.36856 21.92 7.37889H10.0436C9.72729 7.37128 9.47186 7.11775 9.46153 6.80144V5.01367H6.34903C5.20039 5.01367 4.24414 5.90144 4.24414 6.98133V30.3946C4.24414 31.4743 5.20039 32.3528 6.34903 32.3528ZM10.6441 14.405C10.6441 14.0976 10.8933 13.8485 11.2007 13.8485H14.0528V10.9963C14.0528 10.6889 14.302 10.4398 14.6094 10.4398H17.392C17.6993 10.4398 17.9485 10.6889 17.9485 10.9963V13.8485H20.8007C21.108 13.8485 21.3572 14.0976 21.3572 14.405V17.1876C21.3572 17.4949 21.108 17.7441 20.8007 17.7441H17.9485V20.5963C17.9485 20.9036 17.6993 21.1528 17.392 21.1528H14.6094C14.302 21.1528 14.0528 20.9036 14.0528 20.5963V17.7441H11.2007C10.8933 17.7441 10.6441 17.4949 10.6441 17.1876V14.405ZM10.8708 24.005H21.1306C21.4382 24.005 21.6871 24.2542 21.6871 24.5615C21.6871 24.8688 21.4382 25.118 21.1306 25.118H10.8708C10.5632 25.118 10.3142 24.8688 10.3142 24.5615C10.3142 24.2542 10.5632 24.005 10.8708 24.005ZM8.78381 26.7876H23.2175C23.5251 26.7876 23.774 27.0368 23.774 27.3441C23.774 27.6514 23.5251 27.9006 23.2175 27.9006H8.78381C8.47621 27.9006 8.22729 27.6514 8.22729 27.3441C8.22729 27.0368 8.47621 26.7876 8.78381 26.7876Z"
                                                 fill="#0061FF" />
                                             <path
-                                                d="M21.1656 16.7979L18.5448 11.9307L14.8387 19.7544C14.5234 20.4201 13.5961 20.4779 13.2007 19.8564L10.5152 15.6366L9.79574 16.8357C9.62631 17.1181 9.32121 17.2908 8.99192 17.2908H3.04688C3.23324 17.4859 2.24 16.4946 15.3302 29.517C15.6958 29.8808 16.2868 29.8809 16.6525 29.517C29.5412 16.695 28.7498 17.4855 28.9358 17.2908H21.9909C21.646 17.2909 21.329 17.1015 21.1656 16.7979Z"
+                                                d="M21.3568 2.50906H18.7525C18.4905 2.50879 18.2639 2.32591 18.2087 2.06966C17.9935 1.07509 17.0489 0.35254 15.9625 0.35254H15.9557C14.8984 0.351453 13.9748 1.06694 13.7117 2.09086C13.6484 2.33678 13.4267 2.50879 13.1726 2.50906H10.5742V6.26558H21.3568V2.50906Z"
+                                                fill="#0061FF" />
+                                            <path
+                                                d="M15.1646 17.1875V20.0397H16.8341V17.1875C16.8341 16.8802 17.0833 16.631 17.3906 16.631H20.2428V14.9614H17.3906C17.0833 14.9614 16.8341 14.7122 16.8341 14.4049V11.5527H15.1646V14.4049C15.1646 14.7122 14.9154 14.9614 14.608 14.9614H11.7559V16.631H14.608C14.9154 16.631 15.1646 16.8802 15.1646 17.1875Z"
                                                 fill="#0061FF" />
                                         </g>
                                         <defs>
-                                            <clipPath id="clip0_34717_11638">
-                                                <rect width="32" height="28.8744" fill="white"
-                                                    transform="translate(0 0.915039)" />
+                                            <clipPath id="clip0_34717_11667">
+                                                <rect width="32" height="32" fill="white"
+                                                    transform="translate(0 0.352539)" />
                                             </clipPath>
                                         </defs>
-                                    </svg></span>
-                                <h5>Cancer Care</h5>
+                                    </svg>
+                                </span>
+                                <h5>Book now</h5>
                                 <svg width="50" height="3" viewBox="0 0 50 3" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <rect y="0.352539" width="50" height="2" fill="#E74040" />
